# amplifier-bundle-filesystem

./: .gitignore  README.md  bundle.md
behaviors/: apply-patch.yaml
context/: editing-guidance.md
docs/plans/: 2026-02-19-unified-diff-normalization-design.md
modules/tool-apply-patch/: pyproject.toml
modules/tool-apply-patch/amplifier_module_tool_apply_patch/: __init__.py  apply_diff.py  path_validation.py  tool.py
modules/tool-apply-patch/amplifier_module_tool_apply_patch/engines/: __init__.py  function.py  native.py
modules/tool-apply-patch/tests/: conftest.py  test_apply_diff.py  test_apply_diff_helpers.py  test_editing_guidance_content.py  test_function_engine.py  test_native_engine.py  test_path_validation.py  test_tool.py  test_tool_protocol.py
shared/filesystem_utils/: __init__.py
